# Desbloqueador3000

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
build-mac/: CMakeCache.txt  Makefile  cmake_install.cmake
build-mac/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-mac/Desbloqueador3000.app/Contents/: Info.plist
build-mac/Desbloqueador3000.app/Contents/Frameworks/QtPdf.framework/Versions/A/_CodeSignature/: CodeResources
build-mac/Desbloqueador3000.app/Contents/MacOS/: Desbloqueador3000
build-mac/Desbloqueador3000.app/Contents/PlugIns/imageformats/: libqgif.dylib  libqico.dylib
build-mac/Desbloqueador3000.app/Contents/PlugIns/styles/: libqmacstyle.dylib
build-mac/Desbloqueador3000_autogen/: deps  mocs_compilation.cpp
build-win/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Desbloqueador3000.slnx  Desbloqueador3000.vcxproj  Desbloqueador3000.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build-win/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
build-win/Desbloqueador3000.dir/Release/: Desbloqueador3000.exe.recipe  app.res
build-win/Desbloqueador3000.dir/Release/Desbloqu.C1E21A10.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
build-win/Desbloqueador3000_autogen/: mocs_compilation_Release.cpp
build-win/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build-win/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog
build-win/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build-win/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
include/: DropZone.h  ExcelProcessor.h  MainWindow.h  ResultPanel.h  SpinnerWidget.h  Utils.h
resources/: app.rc
src/: DropZone.cpp  ExcelProcessor.cpp  MainWindow.cpp  ResultPanel.cpp  SpinnerWidget.cpp  main.cpp
